--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -198,9 +198,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./images/${{ matrix.image }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           build-args: ${{ matrix.build_args }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            localhost/devcontainer-${{ matrix.image }}:test
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -210,7 +212,7 @@ jobs:
       - name: 'Test image functionality'
         if: steps.should_build.outputs.build == 'true'
         run: |
-          IMAGE_TAG=$(echo "${{ steps.meta.outputs.tags }}" | head -n1)
+          IMAGE_TAG="localhost/devcontainer-${{ matrix.image }}:test"
           
           case "${{ matrix.image }}" in
             ansible)
@@ -241,7 +243,7 @@ jobs:
         if: steps.should_build.outputs.build == 'true'
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.meta.outputs.tags | split('\n') | first }}
+          image-ref: 'localhost/devcontainer-${{ matrix.image }}:test'
           format: 'sarif'
           output: 'trivy-results-${{ matrix.image }}.sarif'
 
