Fix hadolint errors

--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -6,10 +6,10 @@ FROM python:${PYTHON_VERSION}-slim AS builder
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential=12.* \
-    gcc=4:13.* \
-    libffi-dev=3.* \
-    libssl-dev=3.* \
+    build-essential=12.9 \
+    gcc=4:12.2.0-3 \
+    libffi-dev=3.4.4-1 \
+    libssl-dev=3.0.16-1~deb12u1 \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /tmp
@@ -24,11 +24,11 @@ FROM python:${PYTHON_VERSION}-slim AS production
 
 # Install runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    openssh-client=1:9.* \
-    sshpass=1.* \
-    git=1:2.* \
-    curl=8.* \
-    ca-certificates=20240203 \
+    openssh-client=1:9.2p1-2+deb12u6 \
+    sshpass=1.09-1+b1 \
+    git=1:2.39.5-0+deb12u2 \
+    curl=7.88.1-10+deb12u12 \
+    ca-certificates=20230311+deb12u1 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
