--- a/images/terraform/Dockerfile
+++ b/images/terraform/Dockerfile
@@ -6,9 +6,9 @@ FROM alpine:${ALPINE_VERSION} AS downloader
 
 # Install download dependencies
 RUN apk add --no-cache \
-    curl=8.* \
-    unzip=6.* \
-    gnupg=2.*
+    curl=8.12.1-r0 \
+    unzip=6.0-r14 \
+    gnupg=2.4.5-r0
 
 WORKDIR /tmp
 
@@ -38,14 +38,14 @@ FROM alpine:${ALPINE_VERSION} AS production
 
 # Install runtime dependencies
 RUN apk add --no-cache \
-    bash=5.* \
-    git=2.* \
-    curl=8.* \
-    ca-certificates=20240705-r0 \
-    openssh-client=9.* \
-    python3=3.12.* \
-    py3-pip=24.* \
-    make=4.* \
+    bash=5.2.26-r0 \
+    git=2.45.4-r0 \
+    curl=8.12.1-r0 \
+    ca-certificates=20241121-r1 \
+    openssh-client=9.7_p1-r5 \
+    python3=3.12.11-r0 \
+    py3-pip=24.0-r2 \
+    make=4.4.1-r2 \
     && ln -sf python3 /usr/bin/python
 
 # Create non-root user
@@ -57,9 +57,9 @@ COPY --from=downloader /tmp/terragrunt /usr/local/bin/terragrunt
 COPY --from=downloader /tmp/tflint /usr/local/bin/tflint
 
 # Install Python-based tools
-RUN pip3 install --no-cache-dir \
+RUN pip3 install --no-cache-dir --break-system-packages \
     checkov==3.* \
-    terrascan==1.* \
+    terrascan==0.2.* \
     pre-commit==3.*
 
 # Set environment variables
