--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -21,6 +21,8 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  issues: write
+  actions: read
 
 jobs:
   check-updates:
@@ -220,8 +222,9 @@ jobs:
           git push origin HEAD
 
       - name: 'Create Pull Request'
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             const updates = JSON.parse(fs.readFileSync('updates.json', 'utf8'));
@@ -267,8 +270,9 @@ jobs:
     
     steps:
       - name: 'Create issue for failed update'
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             github.rest.issues.create({
               owner: context.repo.owner,
@@ -278,7 +282,7 @@ jobs:
               
               The automated dependency update workflow failed.
               
-              **Workflow Run**: ${context.runUrl}
+              **Workflow Run**: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
               **Triggered**: ${new Date().toISOString()}
               
               Please check the workflow logs and update dependencies manually if needed.
