Fix some errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -303,7 +303,7 @@ jobs:
           EOF
           
           # Test compose setup
-          docker-compose -f docker-compose.test.yml config
+          docker compose -f docker-compose.test.yml config
 
   notify:
     name: 'Notify Results'
