--- a/.github/dependabot-security.yml
+++ b/.github/dependabot-security.yml
@@ -1,27 +1,27 @@
-# Configuración de seguridad para Dependabot
-# Este archivo define configuraciones adicionales de seguridad
+# Security configuration for Dependabot
+# This file defines additional security configurations
 
-# Habilitar alertas de seguridad de Dependabot
+# Enable Dependabot security alerts
 security-advisories:
   - enabled: true
 
-# Configuración de vulnerabilidades
+# Vulnerability configuration
 vulnerability-alerts:
   - enabled: true
   - auto-dismiss-low-severity: false
 
-# Configuración de actualizaciones de seguridad
+# Security updates configuration
 security-updates:
   - enabled: true
   - auto-merge-patch: true
   - auto-merge-minor: false
 
-# Ecosistemas monitoreados
+# Monitored ecosystems
 ecosystems:
   - pip
   - github-actions
 
-# Configuración de notificaciones
+# Notifications configuration
 notifications:
   - email: true
   - web: true
