--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -191,7 +191,7 @@ jobs:
           tags: |
             type=ref,event=branch
             type=ref,event=pr
-            type=sha,prefix={{branch}}-
+            type=sha,prefix=${{ github.ref_name }}-
             type=raw,value=latest,enable={{is_default_branch}}
 
       - name: 'Build and test image'
