--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -1,15 +1,15 @@
 # syntax=docker/dockerfile:1
 
 # Multi-stage build for Ansible development environment
-ARG PYTHON_VERSION=3.12
+ARG PYTHON_VERSION=3.13
 FROM python:${PYTHON_VERSION}-slim AS builder
 
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential=12.9 \
-    gcc=4:12.2.0-3 \
-    libffi-dev=3.4.4-1 \
-    libssl-dev=3.0.16-1~deb12u1 \
+    build-essential=12.* \
+    gcc=4:12.* \
+    libffi-dev=3.* \
+    libssl-dev=3.* \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /tmp
@@ -19,15 +19,16 @@ COPY requirements.txt .
 RUN pip install --user --no-cache-dir -r requirements.txt
 
 # Production stage
-ARG PYTHON_VERSION=3.12
+ARG PYTHON_VERSION=3.13
 FROM python:${PYTHON_VERSION}-slim AS production
 
 # Install runtime dependencies and tools
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    openssh-client=1:9.2p1-2+deb12u6 \
-    sshpass=1.09-1+b1 \
-    git=1:2.39.5-0+deb12u2 \
-    curl=7.88.1-10+deb12u12 \
+    openssh-client=1:9.* \
+    sshpass=1.* \
+    git=1:2.* \
+    curl=7.* \
+    jq=1.* \
     ca-certificates=20230311+deb12u1 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -41,8 +42,7 @@ COPY --from=builder /root/.local /home/ansible/.local
 # Set PATH to include user local binaries
 ENV PATH=/home/ansible/.local/bin:$PATH
 
-# Set Ansible configuration
-ENV ANSIBLE_HOST_KEY_CHECKING=False
+# Set non-sensitive Ansible configuration
 ENV ANSIBLE_STDOUT_CALLBACK=yaml
 ENV ANSIBLE_INVENTORY_UNPARSED_WARNING=False
 
