--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,33 +4,23 @@ FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
 # Install development dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    wget \
-    git \
-    make \
-    build-essential \
-    ca-certificates \
-    gnupg \
-    lsb-release \
-    jq \
+    curl=8.* \
+    git=1:2.* \
+    make=4.* \
+    build-essential=12.* \
+    ca-certificates=20240203 \
+    gnupg=2.* \
+    lsb-release=12.* \
+    jq=1.* \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Docker CLI
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
-    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null \
-    && apt-get update \
-    && apt-get install -y docker-ce-cli docker-compose-plugin \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+# Set shell options for better error handling
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install Hadolint for Dockerfile linting
-RUN wget -O /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64 \
+RUN curl -L -o /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64 \
     && chmod +x /usr/local/bin/hadolint
-
-# Copy and configure GPG script
-# COPY .devcontainer/setup-gpg.sh /usr/local/bin/setup-gpg.sh
-# RUN chmod +x /usr/local/bin/setup-gpg.sh
 
 # Add vscode user to docker group (user already exists in base image)
 RUN usermod -aG docker vscode || true
