--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "service": "dev",
   "workspaceFolder": "/workspaces/devcontainer-images",
   "shutdownAction": "stopCompose",
-  
+
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
       "username": "vscode",
@@ -23,7 +23,7 @@
       "version": "latest"
     }
   },
-  
+
   "customizations": {
     "vscode": {
       "settings": {
@@ -44,11 +44,12 @@
         "hashicorp.terraform",
         "github.vscode-github-actions",
         "github.copilot",
-        "ms-vscode.makefile-tools"
+        "ms-vscode.makefile-tools",
+        "shardulm94.trailing-spaces"
       ]
     }
   },
-  
+
   "forwardPorts": [],
 
   "postCreateCommand": "make help && make versions",
