fix push image error in ansible image

--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc=4:12.* \
     libffi-dev=3.* \
     libssl-dev=3.* \
+    libonig-dev=6.* \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /tmp
