--- a/images/go/Dockerfile
+++ b/images/go/Dockerfile
@@ -11,7 +11,8 @@ RUN apk add --no-cache \
     ca-certificates=20250619-r0 \
     gcc=14.2.0-r6 \
     musl-dev=1.2.5-r10 \
-    binutils=2.44-r2
+    binutils=2.44-r2 \
+    build-base=0.5-r3
 
 WORKDIR /tmp
 
