--- a/images/go/Dockerfile
+++ b/images/go/Dockerfile
@@ -30,7 +30,7 @@ ARG GO_VERSION=1.24
 ARG ALPINE_VERSION=3.22
 FROM golang:${GO_VERSION}-alpine${ALPINE_VERSION} AS production
 
-# Install runtime dependencies
+# Install runtime dependencies and tools
 RUN apk add --no-cache \
     git=2.49.1-r0 \
     curl=8.14.1-r1 \
