fix push image in test

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -199,7 +199,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./images/${{ matrix.image }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           build-args: ${{ matrix.build_args }}
           tags: |
             ${{ steps.meta.outputs.tags }}
