--- a/images/go/Dockerfile
+++ b/images/go/Dockerfile
@@ -12,7 +12,7 @@ RUN apk add --no-cache \
     gcc=14.2.0-r6 \
     musl-dev=1.2.5-r10 \
     binutils=2.44-r2 \
-    build-base=0.5-r3
+    binutils-gold=2.44-r2
 
 WORKDIR /tmp
 
