--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -64,7 +64,7 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.before || github.event.repository.default_branch + '~1' }}   # Use the previous commit or default_branch~1
+          base: ${{ github.event.before || 'main~1' }}   # Use the previous commit or main~1
           head: HEAD
           extra_args: --debug --only-verified
 
