--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -257,28 +257,23 @@ jobs:
 
             try {
               execSync('git add .');
-              // Check if there are staged changes
               try {
                 execSync('git diff --staged --quiet');
                 console.log('No changes to commit');
                 process.exit(0);
               } catch {
-                // There are changes to commit; proceed with commit and PR creation
+                // There are changes to commit; proceed with commit and push
+                try {
+                  execSync('git commit -m "Update dependencies"', { stdio: 'inherit' });
+                  execSync('git push origin HEAD', { stdio: 'inherit' });
+                  console.log('Successfully committed and pushed changes');
+                } catch (error) {
+                  console.error('Error committing or pushing changes:', error);
+                  process.exit(1);
+                }
               }
             } catch (err) {
               console.error('Error running git commands:', err);
-              process.exit(1);
-            }
-
-            # Proceed with commit and PR creation only if there are changes
-            const { execSync } = require('child_process');
-
-            try {
-              execSync('git commit -m "Update dependencies"', { stdio: 'inherit' });
-              execSync('git push origin HEAD', { stdio: 'inherit' });
-              console.log('Successfully committed and pushed changes');
-            } catch (error) {
-              console.error('Error committing or pushing changes:', error);
               process.exit(1);
             }
 
