--- a/images/ansible/Dockerfile
+++ b/images/ansible/Dockerfile
@@ -61,4 +61,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 CMD ["/bin/bash"]
 
 # Configure GPG for the ansible user in runtime
-RUN echo 'export GPG_TTY=$(tty)' >> /home/ansible/.bashrc
+RUN echo "export GPG_TTY=$(tty)" >> /home/ansible/.bashrc
