--- a/images/go/Dockerfile
+++ b/images/go/Dockerfile
@@ -71,4 +71,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 CMD ["/bin/bash"]
 
 # Configure GPG for the gopher user in runtime
-RUN echo 'export GPG_TTY=$(tty)' >> /home/gopher/.bashrc
+RUN echo "export GPG_TTY=$(tty)" >> /home/gopher/.bashrc
