--- a/images/python/Dockerfile
+++ b/images/python/Dockerfile
@@ -60,4 +60,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 CMD ["/bin/bash"]
 
 # Configure GPG for the developer user in runtime
-RUN echo 'export GPG_TTY=$(tty)' >> /home/developer/.bashrc
+RUN echo "export GPG_TTY=$(tty)" >> /home/developer/.bashrc
