--- a/images/terraform/Dockerfile
+++ b/images/terraform/Dockerfile
@@ -84,4 +84,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 CMD ["/bin/bash"]
 
 # Configure GPG for the terraform user in runtime
-RUN echo 'export GPG_TTY=$(tty)' >> /home/terraform/.bashrc
+RUN echo "export GPG_TTY=$(tty)" >> /home/terraform/.bashrc
