--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,6 +22,10 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl -L -o /usr/local/bin/hadolint https://github.com/hadolint/hadolint/releases/latest/download/hadolint-Linux-x86_64 \
     && chmod +x /usr/local/bin/hadolint
 
+# Install Cosign for container image signing and verification
+RUN curl -L -o /usr/local/bin/cosign "https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64" \
+    && chmod +x /usr/local/bin/cosign
+
 # Add vscode user to docker group (user already exists in base image)
 RUN usermod -aG docker vscode || true
 
