--- a/images/terraform/Dockerfile
+++ b/images/terraform/Dockerfile
@@ -82,3 +82,6 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 
 # Default command
 CMD ["/bin/bash"]
+
+# Configure GPG for the terraform user in runtime
+RUN echo "export GPG_TTY=$(tty)" >> /home/terraform/.bashrc
