--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,7 @@ jobs:
           tags: |
             type=raw,value=latest
             type=raw,value=${{ steps.version.outputs.version }}
+            type=sha,format=long
 
       - name: 'Build and push release image'
         uses: docker/build-push-action@v6
