--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,9 @@ jobs:
   release:
     name: 'Release Images'
     runs-on: ubuntu-latest
+    timeout-minutes: 25  # Timeout de 25 minutos para el job de release
     strategy:
+      max-parallel: 1  # Ejecutar imágenes de forma secuencial
       matrix:
         image: [ansible, python, terraform, go]
         include:
@@ -210,6 +212,7 @@ jobs:
   create-release:
     name: 'Create GitHub Release'
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Timeout de 10 minutos para el job de creación de release
     needs: release
 
     steps:
