--- a/images/terraform/Dockerfile
+++ b/images/terraform/Dockerfile
@@ -4,7 +4,7 @@
 ARG ALPINE_VERSION=3.22
 FROM alpine:${ALPINE_VERSION} AS downloader
 
-# Install download dependencies and tools
+# Install download dependencies
 RUN apk add --no-cache \
     curl=8.14.1-r1 \
     unzip=6.0-r15 \
@@ -35,7 +35,7 @@ RUN curl -fsSL https://github.com/terraform-linters/tflint/releases/download/v${
 ARG ALPINE_VERSION=3.22
 FROM alpine:${ALPINE_VERSION} AS production
 
-# Install runtime dependencies and tools
+# Install runtime dependencies
 RUN apk add --no-cache \
     bash=5.2.37-r0 \
     git=2.49.1-r0 \
